#0000.增加博客概览信息

--- a/i18n/default.properties
+++ b/i18n/default.properties
@@ -1,29 +1,30 @@
-breadcrumb.home=\u4e3b\u9875
-breadcrumb.archive=\u5f52\u6863
-breadcrumb.tags=\u6807\u7b7e
-breadcrumb.categories=\u5206\u7c7b
-date.recently=\u6700\u8fd1
+breadcrumb.home=\u4E3B\u9875
+breadcrumb.archive=\u5F52\u6863
+breadcrumb.tags=\u6807\u7B7E
+breadcrumb.categories=\u5206\u7C7B
+date.recently=\u6700\u8FD1
 date.yesterday=\u6628\u5929
-date.days_ago=\u5929\u524d
-panel.recently_updated=\u6700\u8fd1\u66f4\u65b0
-panel.trending_tags=\u70ed\u95e8\u6807\u7b7e
-panel.site_info=\u7ad9\u70b9\u4fe1\u606f
-footer.right=\u4fdd\u7559\u90e8\u5206\u6743\u5229\u3002
-footer.using=\u4f7f\u7528
-footer.theme=\u4e3b\u9898
-related_posts.further_reading=\u76f8\u5173\u6587\u7ae0
-related_posts.older=\u4e0b\u4e00\u7bc7
-related_posts.newer=\u4e0a\u4e00\u7bc7
-post_sharing.share=\u5206\u4eab
-words_count.words=\u5b57
-words_count.min=\u5206\u949f
-words_count.read=\u9605\u8bfb
-post.posted=\u53d1\u8868\u4e8e
-post.updated=\u66f4\u65b0\u4e8e
-post.by=\u4f5c\u8005
-post.license=\u8bb8\u53ef\u534f\u8bae
-post.button.copy_link.succeeded=\u590d\u5236\u6210\u529f
-top_bar.search=\u641c\u7d22
-top_bar.need_search_plugin=\u9700\u8981\u5b89\u88c5\u641c\u7d22\u63d2\u4ef6
-cancel=\u53d6\u6d88
-panel.contents=\u76ee\u5f55
+date.days_ago=\u5929\u524D
+panel.recently_updated=\u6700\u8FD1\u66F4\u65B0
+panel.trending_tags=\u70ED\u95E8\u6807\u7B7E
+panel.site_info=\u7AD9\u70B9\u4FE1\u606F
+blog.overview=\u535A\u5BA2\u6982\u51B5
+footer.right=\u4FDD\u7559\u90E8\u5206\u6743\u5229\u3002
+footer.using=\u4F7F\u7528
+footer.theme=\u4E3B\u9898
+related_posts.further_reading=\u76F8\u5173\u6587\u7AE0
+related_posts.older=\u4E0B\u4E00\u7BC7
+related_posts.newer=\u4E0A\u4E00\u7BC7
+post_sharing.share=\u5206\u4EAB
+words_count.words=\u5B57
+words_count.min=\u5206\u949F
+words_count.read=\u9605\u8BFB
+post.posted=\u53D1\u8868\u4E8E
+post.updated=\u66F4\u65B0\u4E8E
+post.by=\u4F5C\u8005
+post.license=\u8BB8\u53EF\u534F\u8BAE
+post.button.copy_link.succeeded=\u590D\u5236\u6210\u529F
+top_bar.search=\u641C\u7D22
+top_bar.need_search_plugin=\u9700\u8981\u5B89\u88C5\u641C\u7D22\u63D2\u4EF6
+cancel=\u53D6\u6D88
+panel.contents=\u76EE\u5F55
