--- a/i18n/en.properties
+++ b/i18n/en.properties
@@ -7,7 +7,7 @@ data.yesterday=yesterday
 date.days_ago=\u0020days ago
 panel.recently_updated=Recently Updated
 panel.trending_tags=Trending Tags
-panel.site_info=Site Info
+blog.overview=Blog Overview
 footer.right=Some rights reserved.
 footer.using=Using the
 footer.theme=theme
